[package]
name = "eip"
version = "0.2.0"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Get your external ip address"
homepage = "https://github.com/wyhaya/eip"
repository = "https://github.com/wyhaya/eip.git"
readme = "README.md"
keywords = [
    "ip",
    "address",
    "command"
]

[dependencies]
nix = "0.14.1"
