[package]
name = "eip"
version = "0.2.3"
authors = ["wyhaya <wyhaya@gmail.com>"]
license = "MIT"
edition = "2018"

description = "Get your ip address"
homepage = "https://github.com/wyhaya/eip"
repository = "https://github.com/wyhaya/eip.git"
readme = "README.md"
keywords = [
    "ip",
    "address",
    "command"
]

[dependencies]
nix = "0.17.0"
